objects/Filter_Manager__c.object
<CustomObject>
    <description>This is the object that holds the Filter options for Custom Data Tables.</description>
    <fields>
        <fullName>Columns_JSON__c</fullName>
        <description>Indicates the Columns on a Filter</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>JSON Formatted</inlineHelpText>
        <label>Columns</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_API_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Filter API Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filter_Items_JSON__c</fullName>
        <description>The Filter Line Items</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>JSON Formatted</inlineHelpText>
        <label>Filter Items</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookups to the Filter the Assignment is attached to.</description>
        <label>Filter</label>
        <referenceTo>Filter_Manager__c</referenceTo>
        <relationshipLabel>Filter Manager</relationshipLabel>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates if a Filter will be loaded by Default on a Table Component for a Certain User</description>
        <inlineHelpText>You can only have one Pinned per Table Component</inlineHelpText>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Table_Component_Name__c</fullName>
        <description>Indicates the Name of the Table this filter relates to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Table Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <description>Indicates Whether a Filter can be seen by everybody or specific users</description>
        <inlineHelpText>Public - Everybody
Private - Users with the Assignment record</inlineHelpText>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Filter Manager</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Manager</pluralLabel>
    <recordTypes>
        <fullName>Assignment</fullName>
        <active>true</active>
        <label>Assignment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Filter</fullName>
        <active>true</active>
        <label>Filter</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>